--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@
 
   @media (max-width:375px) {
     body{
-        padding: 10px; 
+        padding: 10px;
+        padding-right: 10px;
     }
 
   }
