--- a/style.css
+++ b/style.css
@@ -1,85 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 
 .attribution {
-    font-size: 11px;
-    text-align: center;
-  }
-  .attribution a {
-    color: hsl(228, 45%, 44%);
-  }
-  body {
-    font-family: 'Figtree', sans-serif;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: hsl(47, 88%, 63%);
-  }
-  .container {
-    width: 340px;
-    height: 480px;
-    background: #fff;
-    border: 2px solid;
-    border-radius: 15px;
-    box-shadow: 9px 9px;
-    padding: 20px;
-    text-align: flex-start;
-    max-width: 600px; 
-    margin: 0 auto;
-  }
-  .container img{
-    border-radius: 10px;
-  }
-  .container h4{
-    font-size: 14px;
-    font-weight: 800;
-    width: 80px;
-    padding: 7px;
-    border-radius: 5px;
-    text-align: center;
-    background-color: hsl(47, 88%, 63%);
-  }
- .container h1{
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Figtree", sans-serif;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: hsl(47, 88%, 63%);
+}
+
+#container__bg {
+  width: 100%;
+}
+
+.container {
+  width: 340px;
+  height: 480px;
+  background: #fff;
+  border: 2px solid;
+  border-radius: 15px;
+  box-shadow: 9px 9px;
+  padding: 20px;
+  text-align: flex-start;
+  max-width: 600px;
+  margin: 0 auto;
+  transition: 0.3s;
+}
+.container:hover {
+  box-shadow: 13px 15px;
+}
+.container img {
+  border-radius: 10px;
+}
+.container h1 {
+  font-size: 15px;
+  font-weight: 800;
+  width: 80px;
+  padding: 7px;
+  border-radius: 5px;
+  text-align: center;
+  background-color: hsl(47, 88%, 63%);
+}
+.container h3 {
   font-size: 20px;
   font-weight: 800;
- }
- .container h1:hover{
+}
+.container h3:hover {
   cursor: pointer;
-  color:  hsl(47, 88%, 63%);
- }
+  color: hsl(47, 88%, 63%);
+}
 
- .image {
+.image {
   display: flex;
   align-items: center;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   margin-top: 20px;
- }
- .container p{
+}
+.container p {
   font-size: 15px;
   line-height: 1.5;
   color: gray;
- }
-  
- .image img {
-   width: 30px;
-   border-radius: 50%; 
-   margin-right: 12px; 
+}
+
+.image img {
+  width: 35px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+.image span {
+  margin-left: 1px;
+  font-size: 14px;
+  font-weight: 800;
+}
+
+h2 {
+  font-size: 18px;
+}
+@media (max-width: 470px) {
+  .container {
+    width: 80%;
   }
-  
-  .image span {
-    margin-left: 1px;
-    font-size: 11px;
-    font-weight: 800;
-  }
-
-  @media (max-width:375px) {
-    body{
-        padding-right: 25px;
-    }
-
-  }
-
-
-  
+}
